argocd/clusters/home/pihole/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole-app
        image: "pihole/pihole:2024.07.0"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 53
            name: dns
            protocol: TCP
          - containerPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort:  443
            name: https
            protocol: TCP
          - containerPort: 67
            name: client-udp
            protocol: UDP
        resources: {}
        volumeMounts:
          - mountPath: /etc/pihole
            name: config-pihole
          - mountPath: /etc/dnsmasq.d
            name: config-dnsmasq
      restartPolicy: Always
      volumes:
        - name: config-pihole
          emptyDir: {}
        - name: config-dnsmasq
          emptyDir: {}
