argocd/clusters/home/pihole/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8123
      targetPort: http
      protocol: TCP
    - name: dns
      port: 53
      targetPort: dns
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
