argocd/clusters/home/pihole/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: REPLACE
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole
              port:
                name: "web"
